--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@firethreexyz/firethree-protocol": "0.16.7-beta",
-    "autoprefixer": "10.4.15",
+    "@firethreexyz/firethree-protocol": "^0.18.0",
     "@solana/web3.js": "1.78.0",
+    "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
     "crypto-browserify": "^3.12.0",
     "encoding": "^0.1.13",
